Pieuvre/tests/Proofs/ShouldFail/notunifiable.8pus
Goal (A -> B -> C) -> A.
intro.
apply h.
Qed.
